--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
         
         <h2 class="contact-heading">Contact us for more information</h2>
         <div class="social-links">
-            <a href="https://www.facebook.com/profile.php?id=61569123135285" class="social-icon">
+            <a href="https://www.facebook.com/profile.php?id=61569123135285" target="_blank" class="social-icon">
                 <i class="fab fa-facebook"></i>
             </a>
-            <a href="https://x.com/LebeClicks" class="social-icon">
+            <a href="https://x.com/LebeClicks" target="_blank" class="social-icon">
                 <i class="fab fa-twitter"></i>
             </a>
-            <a href="https://wa.me/256777629829" class="social-icon">
+            <a href="https://wa.me/256777629829" target="_blank" class="social-icon">
                 <i class="fab fa-whatsapp"></i>
             </a>
-            <a href="tel:+256777629829" class="social-icon">
+            <a href="tel:+256777629829" target="_blank" class="social-icon">
                 <i class="fas fa-phone"></i>
             </a>
         </div>
